Loading/saving. Browser platform. Nan bug fix.

--- a/src/pages/popover/popover.html
+++ b/src/pages/popover/popover.html
@@ -3,7 +3,7 @@
       <!-- <ion-list-header>Add players to game</ion-list-header> -->
 	  <ion-item>
 		<ion-input type="text" placeholder="New player name" maxlength="20" [(ngModel)]="newPlayerName"></ion-input>		
-		<button ion-button item-right clear (click)='createPlayer()'>
+		<button ion-button item-right (click)='createPlayer()'>
 			Create
 		</button>
 	  </ion-item>
