--- a/src/pages/players/players.html
+++ b/src/pages/players/players.html
@@ -3,21 +3,64 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Players</ion-title>
+	<ion-title><ion-icon class="ion-ios-person" item-left></ion-icon>&nbsp;&nbsp;&nbsp;Players</ion-title>		
   </ion-navbar>
 </ion-header>
 
 <ion-content>
-  <ion-list>
-    <button ion-item *ngFor="let item of items" (click)="itemTapped($event, item)">
-      <ion-icon [name]="item.icon" item-left></ion-icon>
-      {{item.title}}
-      <div class="item-note" item-right>
-        {{item.note}}
-      </div>
-    </button>
-  </ion-list>
-  <div *ngIf="selectedItem" padding>
-    You navigated here from <b>{{selectedItem.title}}</b>
-  </div>
+	<ion-grid>
+		<ion-row>
+			<ion-col col-6>
+				<ion-item no-lines text-center>
+					Name
+				</ion-item>
+			</ion-col>
+			<ion-col col-3>
+				<ion-item no-lines text-center>
+					Games played
+				</ion-item>
+			</ion-col>
+			<ion-col col-1>
+			</ion-col>
+		</ion-row>
+		<ion-row *ngFor="let x of playersInBase">
+			<ion-col col-6 *ngIf="isRenaming != x.name">
+				<ion-item text-center style="font-weight: bold;">
+					{{x.name}}
+				</ion-item>
+			</ion-col>
+			<ion-col col-6 *ngIf="isRenaming == x.name">
+				<ion-input text-center type="text" placeholder="Rename player {{x.name}}" maxlength="20" (change)='onRename($event.target.value, x.name)'></ion-input>
+			</ion-col>
+			<ion-col col-3>
+				<ion-item text-center style="font-weight: bold;">
+					{{x.games}}
+				</ion-item>
+			</ion-col>
+			<ion-col col-2>
+				<ion-item text-center no-lines>
+					<button ion-button clear (click)='renamePlayer(x.name)'>
+						<ion-icon name="create" style="font-size: 25px;"></ion-icon>
+					</button>
+					<button ion-button clear (click)='deletePlayer(x.name)'>
+						<ion-icon name="trash" style="font-size: 25px;"></ion-icon>
+					</button>					
+				</ion-item>
+			</ion-col>
+		</ion-row>
+		<ion-row>
+			<ion-col col-6>
+				<ion-item>
+					<ion-input text-center type="text" placeholder="New player name" maxlength="20" [(ngModel)]="newPlayerName"></ion-input>		
+				</ion-item>
+			</ion-col>
+			<ion-col col-3>
+				<ion-item no-lines text-center>		
+					<button ion-button item-center (click)='createPlayer()'>
+						Create
+					</button>
+				</ion-item>
+			</ion-col>
+		</ion-row>
+	</ion-grid>	
 </ion-content>
