--- a/src/pages/popoverendgame/popoverendgame.html
+++ b/src/pages/popoverendgame/popoverendgame.html
@@ -17,19 +17,19 @@
 				</ion-item>
 			</ion-col>
 			<ion-col>
-				<ion-item no-lines text-center>
+				<ion-item no-lines text-right>
 					Total
 				</ion-item>
 			</ion-col>
 		</ion-row>
 		<ion-row *ngFor="let x of playersInGame">
 			<ion-col>
-				<ion-item text-center>
+				<ion-item text-center style="font-weight: bold;">
 					{{x.name}}
 				</ion-item>
 			</ion-col>
 			<ion-col>
-				<ion-item text-right>
+				<ion-item text-right style="font-weight: bold;">
 					{{x.total}}
 				</ion-item>
 			</ion-col>
