--- a/src/pages/players/players.html
+++ b/src/pages/players/players.html
@@ -10,7 +10,7 @@
 <ion-content no-padding>
 	<ion-grid no-padding nowrap>
 		<ion-row responsive-sm nowrap>
-			<ion-col>
+			<ion-col col-6>
 				<ion-item no-lines text-center>
 					Name
 				</ion-item>
@@ -33,7 +33,7 @@
 			</ion-col>
 		</ion-row>
 		<ion-row *ngFor="let x of players" responsive-sm nowrap style="border: thin solid lightgray;">
-			<ion-col *ngIf="isRenaming != x.name">
+			<ion-col *ngIf="isRenaming != x.name" col-6>
 				<ion-item text-center style="font-weight: bold;">
 					{{x.name}}
 				</ion-item>
@@ -46,7 +46,7 @@
 					</button>					
 				</ion-item>
 			</ion-col>
-			<ion-col *ngIf="isRenaming == x.name" >
+			<ion-col *ngIf="isRenaming == x.name" col-6>
 				<ion-input text-center type="text" [(ngModel)]="copyName" placeholder="Rename player {{x.name}}" maxlength="20" (change)='onRename($event.target.value, x.name)'></ion-input>
 			</ion-col>
 			<ion-col>
@@ -67,7 +67,7 @@
 			</ion-col>
 		</ion-row>
 		<ion-row responsive-sm wrap>
-			<ion-col>
+			<ion-col col-6>
 				<ion-item>
 					<ion-input text-center type="text" placeholder="New player name" maxlength="20" [(ngModel)]="newPlayerName"></ion-input>		
 				</ion-item>
