--- a/src/pages/statistics/statistics.html
+++ b/src/pages/statistics/statistics.html
@@ -23,7 +23,7 @@
  
     <ion-card *ngIf="stats1.length > 0">
       <ion-card-header>
-        Upper results sucess ratio
+        Upper section sucess ratio
       </ion-card-header>
       <ion-card-content>
         <canvas #UpstairsCanvas></canvas>
