Hide total. Cosmetic popover and players changes.

--- a/src/pages/game/game.html
+++ b/src/pages/game/game.html
@@ -228,7 +228,8 @@
 					<p style="font-weight: bold;text-align:center;">Total</p>
 				</ion-col>
 				<ion-col *ngFor="let x of playersClass.areInGame()" >
-					<p style="font-weight: bold;text-align:center;">{{x.total}}</p>
+					<p *ngIf="!settings.hideTotal" style="font-weight: bold;text-align:center;">{{x.total}}</p>
+					<p *ngIf="settings.hideTotal" class="blurry-text" style="font-weight: bold;text-align:center;">{{x.total}}</p>
 				</ion-col>
 				<ion-col *ngIf="!playersClass.isAnyPlayerInGame()">
 					<ion-item no-lines></ion-item>
