--- a/src/pages/players/players.html
+++ b/src/pages/players/players.html
@@ -55,7 +55,7 @@
 					<button ion-button clear (click)='renamePlayer(x.name)'>
 						<ion-icon name="create" style="font-size: 25px;"></ion-icon>
 					</button>
-					<button ion-button clear (click)='deletePlayer(x.name)'>
+					<button ion-button clear (click)='deletePlayer(x.name)' color="danger">
 						<ion-icon name="trash" style="font-size: 25px;"></ion-icon>
 					</button>					
 				</ion-item>
