--- a/src/pages/popover/popover.html
+++ b/src/pages/popover/popover.html
@@ -1,16 +1,21 @@
 <ion-content>
-	<ion-list>
-	  <ion-item>
-		<ion-input type="text" placeholder="New player name" maxlength="20" [(ngModel)]="newPlayerName"></ion-input>		
-		<button ion-button item-right (click)='createPlayer()'>
-			Create
-		</button>
-	  </ion-item>
+	<ion-list>	  
+		<ion-item>				
+				<button ion-button item-center (click)='close()' color="light" round>
+					Play
+				</button>
+	  	</ion-item>
 	  <ion-item-group reorder="true" (ionItemReorder)="reorderPlayers($event)">
 		  <ion-item *ngFor="let x of players">
 			<ion-checkbox [(ngModel)]="x.isInGame" (click)='toGame(x.name, x.isInGame)'></ion-checkbox>
 			<ion-label>{{x.name}}</ion-label>
 		  </ion-item>
-	  </ion-item-group>
+		</ion-item-group>
+			<ion-item>
+				<ion-input type="text" placeholder="New player name" maxlength="20" [(ngModel)]="newPlayerName"></ion-input>		
+				<button ion-button color="secondary" item-right (click)='createPlayer()'>
+					Create
+				</button>
+	  	</ion-item>
     </ion-list>
 </ion-content>
