--- a/src/pages/players/players.html
+++ b/src/pages/players/players.html
@@ -17,7 +17,7 @@
 			</ion-col>
 			<ion-col>
 				<ion-item no-lines text-center>		
-					<button ion-button item-center (click)='createPlayer()'>
+					<button ion-button item-center color="secondary" (click)='createPlayer()'>
 						Create
 					</button>
 				</ion-item>
