--- a/src/pages/popover/popover.html
+++ b/src/pages/popover/popover.html
@@ -1,7 +1,7 @@
 <ion-content>
 	<ion-list>	  
-		<ion-item>				
-				<button ion-button item-center (click)='close()' color="light" round>
+		<ion-item text-center>				
+				<button ion-button (click)='close()' color="light" round>
 					Play
 				</button>
 	  	</ion-item>
