--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -10,7 +10,7 @@
 <ion-content no-padding>
 	<ion-card> 
 		<ion-item>
-		  <ion-label>Hide running total result until game finishes</ion-label>
+		  <ion-label>Hide total result until game's end</ion-label>
 		  <ion-toggle [(ngModel)]="settingsClass.settings.hideTotal" (ionChange)='updateHideTotal()'></ion-toggle>
 		</ion-item>
 	</ion-card>
