--- a/src/pages/statistics/statistics.html
+++ b/src/pages/statistics/statistics.html
@@ -14,7 +14,7 @@
   
   <ion-card *ngIf="stats1.length > 0">
       <ion-card-header>
-        Yatzi success ratio
+        Yatzy row success ratio
       </ion-card-header>
       <ion-card-content>
         <canvas #YatziCanvas></canvas>
